update script for pmem benchmark